WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
95045
Initialized m_hasNonEmptyList to fix a valgrind uninitialized read
https://bugs.webkit.org/show_bug.cgi?id=95045
Summary
Initialized m_hasNonEmptyList to fix a valgrind uninitialized read
Nico Weber
Reported
2012-08-26 22:33:59 PDT
Initialized m_hasNonEmptyList to fix a valgrind uninitialized read
Attachments
Patch
(3.76 KB, patch)
2012-08-26 22:35 PDT
,
Nico Weber
no flags
Details
Formatted Diff
Diff
Patch for landing
(3.48 KB, patch)
2012-08-26 22:41 PDT
,
Nico Weber
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Nico Weber
Comment 1
2012-08-26 22:35:30 PDT
Created
attachment 160637
[details]
Patch
Kent Tamura
Comment 2
2012-08-26 22:40:15 PDT
Comment on
attachment 160637
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=160637&action=review
> Source/WebCore/html/HTMLInputElement.cpp:1529 > +#if ENABLE(DATALIST_ELEMENT) > if (!m_hasNonEmptyList) > return 0; > +#endif
You don't need to add #if ENABLE(DATALIST_ELEMENT) because HTMLInputElement::dataList() is in #if ENABLE_DATALIST_ELEMENT).
Nico Weber
Comment 3
2012-08-26 22:41:13 PDT
Comment on
attachment 160637
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=160637&action=review
>> Source/WebCore/html/HTMLInputElement.cpp:1529 >> +#endif > > You don't need to add #if ENABLE(DATALIST_ELEMENT) because HTMLInputElement::dataList() is in #if ENABLE_DATALIST_ELEMENT).
Oh, indeed. Thanks, I removed this bit again.
Nico Weber
Comment 4
2012-08-26 22:41:31 PDT
Created
attachment 160638
[details]
Patch for landing
WebKit Review Bot
Comment 5
2012-08-26 23:50:08 PDT
Comment on
attachment 160638
[details]
Patch for landing Clearing flags on attachment: 160638 Committed
r126727
: <
http://trac.webkit.org/changeset/126727
>
WebKit Review Bot
Comment 6
2012-08-26 23:50:11 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug